Fixes blog page banner video sizing on mobile landscape view.

--- a/frontend/scss/pages/blog/_blog-master-banner.scss
+++ b/frontend/scss/pages/blog/_blog-master-banner.scss
@@ -120,6 +120,13 @@
     }
 
     @include for-tablet-portrait-up {
+      &.Section--banner {
+        .Banner-underlay {
+          height: unset;
+          width: 900px;
+        }
+      }
+
       &#blog-master-banner {
         .Intro {
           .Logo {
@@ -139,16 +146,10 @@
           }
         }
       }
-
-      &#home-banner2 {
-        .NavigationMenu {
-          display: block;
-        }
-      }
     }
 
     @include for-tablet-landscape-up {
-      &.Section--banner {  
+      &.Section--banner {
         .Banner-underlay {
           height: unset;
           width: 1200px;
@@ -157,7 +158,7 @@
     }
 
     @include for-desktop-up {
-      &.Section--banner {  
+      &.Section--banner {
         .Banner-underlay {
           height: unset;
           width: 1800px;
@@ -166,9 +167,46 @@
     }
 
     @include for-big-desktop-up {
-      &.Section--banner {  
+      &.Section--banner {
         .Banner-underlay {
           width: 3840px;
+        }
+      }
+    }
+
+    @include for-medium-window-up {
+      @include for-tablet-portrait-up {
+        &.Section--banner {
+          .Banner-underlay {
+            height: 100%;
+            width: unset;
+          }
+        }
+      }
+
+      @include for-tablet-landscape-up {
+        &.Section--banner {
+          .Banner-underlay {
+            height: unset;
+            width: 1200px;
+          }
+        }
+      }
+  
+      @include for-desktop-up {
+        &.Section--banner {
+          .Banner-underlay {
+            height: unset;
+            width: 1800px;
+          }
+        }
+      }
+  
+      @include for-big-desktop-up {
+        &.Section--banner {
+          .Banner-underlay {
+            width: 3840px;
+          }
         }
       }
     }
